<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
            android:id="@+id/menu_item_go_profiles"
            android:icon="@drawable/profiles_light" 
            android:title="@string/menu_profiles" 
            android:showAsAction="always" />
    <item 
            android:id="@+id/menu_item_go_info"
            android:icon="@drawable/info_light" 
            android:title="@string/menu_info" 
            android:showAsAction="always" />
    
    <group 
        android:id="@+id/menu_group_debug" 
        android:enabled="false" 
        android:visible="false">
	    
	    <item 
	        android:id="@+id/menu_item_backup_all" 
	        android:title="@string/main_menu_backup" />
	    <item 
	        android:id="@+id/menu_item_start_capture" 
	        android:title="@string/main_menu_start_capture" />
	    <item 
	        android:id="@+id/menu_item_stop_capture" 
	        android:title="@string/main_menu_stop_capture" />
	    
    </group>
    
    <item 
        android:id="@+id/menu_item_exit" 
        android:title="@string/main_menu_exit" />
</menu>
