<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_add_profile_info_name_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_add_profile_info_org_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/organization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_add_profile_info_desc_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >
        <Button 
            android:id="@+id/btnCancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" 
            android:text="@string/fragment_add_profile_btn_cancel"/>
        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />
        <Button 
            android:id="@+id/btnOk"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" 
            android:text="@string/fragment_add_profile_btn_ok" />
    </LinearLayout>

</LinearLayout>
